--- a/src/pages/listnotes/list/notes.css
+++ b/src/pages/listnotes/list/notes.css
@@ -17,7 +17,7 @@
 .clear-li:hover {
     box-shadow: none;
     transition: all 0.1s;
-    border: 2px solid #0b7df7;
+    border: 2px solid #8a8a8a;
     border-radius: 3px;
 }
 
